--- a/deploy.yml
+++ b/deploy.yml
@@ -1,25 +1,36 @@
 name: Deploy to VPS
 
 on:
+  # Triggers the workflow on push events for the main branch
   push:
     branches:
-      - main # ให้ workflow ทำงานเมื่อมีการ push ไปที่ branch 'main'
+      - main
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Deploy to VPS via SSH
-      uses: appleboy/ssh-action@master
+    - name: Deploy to Server
+      # Use a specific version for stability
+      uses: appleboy/ssh-action@v0.1.10
       with:
         host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USER }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         port: 22
         script: |
+          echo ">>> Navigating to project directory..."
           cd ${{ secrets.PROJECT_PATH }}
+          echo ">>> Pulling latest code from main branch..."
           git pull origin main
+          echo ">>> Activating virtual environment..."
           source venv/bin/activate
+          echo ">>> Installing/updating Python dependencies..."
           pip install -r requirements.txt
+          echo ">>> Restarting the application service..."
           sudo systemctl restart customer_app
+          echo ">>> Deployment complete!"
