--- a/deploy.yml
+++ b/deploy.yml
@@ -4,7 +4,7 @@ on:
   # Triggers the workflow on push events for the main branch
   push:
     branches:
-      - main
+      - main # ให้ workflow ทำงานเมื่อมีการ push ไปที่ branch 'main'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Deploy to Server
+    - name: Deploy to VPS via SSH
       # Use a specific version for stability
       uses: appleboy/ssh-action@v0.1.10
       with:
