--- a/deploy.yml
+++ b/deploy.yml
@@ -15,7 +15,8 @@ jobs:
 
     steps:
     - name: Deploy to Server
-      uses: appleboy/ssh-action@v0.1.10
+      # Use a specific version for stability
+      uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USER }}
