--- a/deploy.yml
+++ b/deploy.yml
@@ -1,12 +1,9 @@
 name: Deploy to VPS
 
 on:
-  # Triggers the workflow on push events for the main branch
   push:
     branches:
       - main
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
@@ -15,7 +12,6 @@ jobs:
 
     steps:
     - name: Deploy to Server
-      # Use a specific version for stability
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.SSH_HOST }}
@@ -32,5 +28,4 @@ jobs:
           echo ">>> Installing/updating Python dependencies..."
           pip install -r requirements.txt
           echo ">>> Restarting the application service..."
-          sudo systemctl restart customer_app
-          echo ">>> Deployment complete!"
+          sudo systemctl restart customer_app.service
