--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,12 +22,13 @@ jobs:
           echo ">>> Navigating to project directory..."
           cd ${{ secrets.PROJECT_PATH }}
           echo ">>> Pulling latest code from main branch..."
-          git pull origin main
+          # Use fetch and reset to avoid conflicts with local changes on the server
+          git fetch origin main
+          git reset --hard origin/main
           echo ">>> Activating virtual environment..."
           source venv/bin/activate
           echo ">>> Installing/updating Python dependencies..."
           pip install -r requirements.txt
           echo ">>> Restarting the application service..."
-          sudo systemctl restart customer_app.service
           sudo systemctl restart customer_app
           echo ">>> Deployment complete!"
